--- a/appz.yml
+++ b/appz.yml
@@ -1,7 +1,7 @@
 app:
     name: mariadb Master
     code: mariadbmaster
-    notify: mniju@cloudbourne.co
+    notify: mniju@cloudcontrol.com
 
 build:
     version: 10.4
