--- a/setup.yaml
+++ b/setup.yaml
@@ -1,12 +1,30 @@
 users:
-  - name: wordpress
-    password: $MYSQL_WORDPRESS_PASSWORD
+  - name: springbootweb
+    password: $MYSQL_SPRINGBOOTWEB_PASSWORD
+    role: superuser
     
 databases:
-  - name: wordpress
+  - name: springbootweb
+    owner: springbootweb
+    tablespace:
+      - name: tb1
+        location: /appz/data/tb1
+    schemas:
+      - name: schema1
+        authorised_user: springbootweb
+        search_path: true
   
 acl:
-  - database: wordpress
-    user: wordpress
-    access: ALL
+  - database: springbootweb
+    user: springbootweb
+    accexx: ALL
+
+restore:
+  - database: springbootweb
+    source:
+      url: 'https://www.ecloudcontrol.com/wp-content/uploads/2021/06/accountsdb-springboot.sql_.zip'
+    user: springbootweb
+    password: $MYSQL_SPRINGBOOTWEB_PASSWORD
+    token: 20220221-0953
+    
     
