--- a/appz.yml
+++ b/appz.yml
@@ -11,7 +11,7 @@ build:
     image_template: mariadb_master-10.4
 
 deploy:
-    context: minnaniju/DEV
+    context: mushraf6461/DEV
     type: statefulset
     ingress: none
     replicas: 1
